utopia-defaults (2018.1~) UNRELEASED; urgency=medium

  * mate: set default terminal (e.g. for caja-open-terminal) to
    x-terminal-emulator
  * desktop-common: add config defaults for LightDM
  * d/control:
    - Add R: numix-frost-theme, E: lightdm, lightdm-gtk-greeter for new LightDM defaults
    - Maintenance: bump Standards-Version to 4.2.0, update my email
    - cinnamon, mate: recommend the corresponding utopia-desktop-* package
  * New package: utopia-xfce-defaults - defaults for Xfce, Thunar, etc.

 -- James Lu <james@overdrivenetworks.com>  Sun, 19 Aug 2018 20:55:55 -0700

utopia-defaults (2017.12.19) unstable; urgency=medium

  * various: add missing dependencies on fonts-noto-hinted (for Noto Sans).
  * Bump Standards-Version to 4.1.2.
  * Update homepage to new GitHub repository.
  * New package: utopia-desktop-defaults containing general settings for all
    desktops (fontconfig, GTK+ tweaks).
  * Add setting to sort directories first in GTK+3's file picker.

 -- James Lu <bitflip3@gmail.com>  Tue, 19 Dec 2017 14:44:36 -0800

utopia-defaults (2017.06.17) unstable; urgency=medium

  * Set default Cinnamon theme to Arc-Dark, as mint-cinnamon-themes has
    been bumped to imports.
    - Adjust dependencies: add arc-theme (>= 20170302-1~) as that version
      introduces support for Cinnamon 3.2.
  * Re-run wrap-and-sort.
  * Remove utopia-cinnamon-tweaks transitional package, no longer needed
    post stretch.

 -- James Lu <bitflip3@gmail.com>  Sat, 17 Jun 2017 11:52:05 -0700

utopia-defaults (2017.04.16) unstable; urgency=high

  * Fix upgrade path for utopia-cinnamon-(tweaks|defaults)

 -- James Lu <bitflip3@gmail.com>  Sun, 16 Apr 2017 00:56:25 -0700

utopia-defaults (2017.04.13) unstable; urgency=medium

  * Merge utopia-cinnamon-tweaks into utopia-cinnamon-defaults, making the
    former a transitional package.
  * Restructured sources to pull from FHS-style paths directly.
  * -gnomeapps-defaults: override GTK 3 file chooser defaults to start in