@@ -1,79 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<channel name="xfce4-panel" version="1.0">
-  <property name="panels" type="array">
-    <value type="int" value="1"/>
-    <property name="panel-1" type="empty">
-      <property name="size" type="uint" value="32"/>
-      <property name="position" type="string" value="p=12;x=247;y=545"/>
-      <property name="length" type="uint" value="100"/>
-      <property name="position-locked" type="bool" value="true"/>
-      <property name="plugin-ids" type="array">
-        <value type="int" value="16"/>
-        <value type="int" value="2"/>
-        <value type="int" value="8"/>
-        <value type="int" value="1"/>
-        <value type="int" value="9"/>
-        <value type="int" value="4"/>
-        <value type="int" value="3"/>
-        <value type="int" value="10"/>
-        <value type="int" value="6"/>
-        <value type="int" value="11"/>
-        <value type="int" value="5"/>
-        <value type="int" value="7"/>
-      </property>
-      <property name="mode" type="uint" value="0"/>
-      <property name="nrows" type="uint" value="1"/>
-      <property name="disable-struts" type="bool" value="false"/>
-    </property>
-  </property>
-  <property name="plugins" type="empty">
-    <property name="plugin-3" type="string" value="tasklist">
-      <property name="middle-click" type="uint" value="1"/>
-      <property name="flat-buttons" type="bool" value="false"/>
-      <property name="show-handle" type="bool" value="true"/>
-      <property name="show-labels" type="bool" value="true"/>
-      <property name="grouping" type="uint" value="0"/>
-      <property name="sort-order" type="uint" value="4"/>
-      <property name="window-scrolling" type="bool" value="true"/>
-    </property>
-    <property name="plugin-6" type="string" value="systray">
-    </property>
-    <property name="plugin-7" type="string" value="showdesktop"/>
-    <property name="plugin-16" type="string" value="whiskermenu"/>
-    <property name="plugin-1" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="14268208201.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-8" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="14268208263.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-9" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="14954416663.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-5" type="string" value="datetime"/>
-    <property name="plugin-2" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="14954414051.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-4" type="string" value="launcher">
-      <property name="items" type="array">
-        <value type="string" value="14954415312.desktop"/>
-      </property>
-    </property>
-    <property name="plugin-10" type="string" value="separator">
-      <property name="expand" type="bool" value="true"/>
-      <property name="style" type="uint" value="1"/>
-    </property>
-    <property name="plugin-11" type="string" value="pulseaudio">
-      <property name="enable-keyboard-shortcuts" type="bool" value="true"/>
-    </property>
-  </property>
-  <property name="configver" type="int" value="2"/>
-</channel>
